<resources>
    <string name="app_name">Rest Assured</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="completed_header">Last Completed: </string>

    <string name="action_example">Example action</string>
    <string name="enter_title">Enter Title</string>
    <string name="new_item">New Item</string>
    <string name="repeat">Repeat</string>
    <string name="remind_me">Remind Me</string>
    <string name="x">x</string>
    <string name="app_description">Rest Assured is meant to make your life easier.</string>
    <string name="instructions">Add an item and stop trying to remember if you\'ve already completed it! Tap an item to mark it completed, or press and hold to delete it.</string>
    <string name="repeating">Repeat = Item can be marked completed multiple times</string>
    <string name="reminder">Remind Me = Receive a notification when it is time to complete this item</string>
    <string name="remove_all">Clear Reminders</string>

    <string name="alarm_service_label">Don\'t Forget!</string>


    <string-array name="nav_items">
        <item>Help</item>
        <item>Clear Reminders</item>
        <item>Settings</item>
        <item>Donate</item>
    </string-array>

    <string-array name="date_items">
        <item>Today</item>
        <item>Tomorrow</item>
    </string-array>
    <string-array name="time_items">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
        <item>Night</item>
    </string-array>
</resources>
